--- a/style.css
+++ b/style.css
@@ -1,3 +1,49 @@
 * {
     margin: 0;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+}
+
+#game-area {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    gap: 10px;
+}
+
+#board {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: 
+      "1 2 3"
+      "4 5 6"
+      "7 8 9";
+    min-width: 70vh;
+    justify-self: center;
+}
+
+.box {
+    border: 1px solid black;
+    aspect-ratio: 1/1;
+    /*border is overlapping causing extra dark lines*/
+    /*work on text in box, big size*/
+}
+
+.symbol-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 20vh;
+}
+
+#restart {
+    font-size: 5vh;
+    padding: 1vh 2vh;
+}
