--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ form div {
 .stat-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.stat-container .box {
+    width: 80%;
 }
 
 .change-name {
